Add proxy to html service